fix: issues with social icons on footer on mobile, fixed a link

--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -52,7 +52,7 @@
   height: 32px;
   width: auto;
   margin-right: 30px;
-  margin-left: 5px;
+  margin-left: 20px;
 }
 
 .logos .behance {
@@ -110,10 +110,17 @@
   .textWrapper {
     padding: 0;
   }
-  .profLinks {
+  .iconLink {
+    width: 250px;
     display: flex;
-    flex-direction: column;
-    align-items: left;
-    flex-wrap: nowrap;
+    flex-direction: row;
+   justify-content: space-between;
+    
   }
+  .logos {
+    height: 32px;
+    margin-right: 30px;
+  }
+  
+
 }
